--- a/componentes/PreviewArtigoDestaque/PreviewArtigoDestaque.module.css
+++ b/componentes/PreviewArtigoDestaque/PreviewArtigoDestaque.module.css
@@ -12,11 +12,13 @@
 .ContainerDestaque{
     display: flex;
     flex-direction: column;
-    width: 60%;
+    width: 100%;
     gap: 45px;
-    margin-right: 10px;
+    margin-right: 45px;
 }
-
+.ContainerDestaque a{
+    text-decoration: none;
+}
 .PreviewArtigoDestaqueTag{
     display: flex;
     justify-content: center;
@@ -55,6 +57,7 @@
 .PreviewArtigoDestaqueAutor{
     display: flex;
     flex-direction: row;
+    align-items: center;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -78,6 +81,67 @@
 .PreviewArtigoDestaqueImage{
     background-color: #606E78;
     border-radius: 20px;
-    width: 40%;
-    height: 490px;
+    width: 100%;
+    height: auto;
+}
+
+.PreviewArtigoDestaqueImageContainer{
+    border-radius: 20px;
+    height: fit-content;
+    top: 80px;
+    position: relative;
+}
+
+
+@media screen and (max-width: 1023px){
+    .PreviewArtigoDestaqueContainer{
+        flex-direction: column-reverse;
+        padding: 16px;
+        gap: 45px;
+    }
+    .ContainerDestaque{
+        width: 100%;
+        margin-right: 0px;
+    }
+    .PreviewArtigoDestaqueTitulo{
+        font-size: 48px;
+    }
+    .PreviewArtigoDestaqueTexto{
+        font-size: 16px;
+    }
+    .PreviewArtigoDestaqueImage{
+        width: 100%;
+        height: auto;
+        background-color: none;
+    }
+    
+}
+
+@media screen and (min-width: 1023px) and (max-width: 1439px){
+    .PreviewArtigoDestaqueContainer{
+        flex-direction: column-reverse;
+        padding: 72px 82px 45px 82px;
+        gap: 45px;
+    }
+    .ContainerDestaque{
+        width: 100%;
+        margin-right: 0px;
+    }
+    .PreviewArtigoDestaqueTitulo{
+        font-size: 48px;
+    }
+    .PreviewArtigoDestaqueTexto{
+        font-size: 16px;
+    }
+    .PreviewArtigoDestaqueImage{
+        width: 100%;
+        height: auto;
+        background-color: none;
+    }
+    
+}
+@media screen and (min-width: 1920px) {
+    .PreviewArtigoDestaqueImageContainer{
+        position:static;
+    }
 }
