--- a/componentes/PanelSelector/PanelSelector.module.css
+++ b/componentes/PanelSelector/PanelSelector.module.css
@@ -26,19 +26,21 @@
   gap: 24px;
   border-top: 1px solid #D1D1D2;
   
-  height: 100px;
   min-width: 100%;
-  width: fit-content;
-  height: 43px;
+  width: 100%;
+  height: 63px;
   padding: 0 9%;
 
   font-family: "Inter";
   font-size: small;
   overflow-x: scroll;
   scrollbar-width: none;
+
 }
+
 .PanelSelectorContainer::-webkit-scrollbar {
-  display: none;
+  background: none;
+  height: 5px;
 }
 
 .PanelSelectorButtonSelected {
