--- a/componentes/AboutSection/AboutSection.module.css
+++ b/componentes/AboutSection/AboutSection.module.css
@@ -12,10 +12,11 @@
   display: flex;
   flex-direction: column;
   gap: 65;
-  max-height: 65%;
+  
   width: 65%;
   padding: 0 30px;
   height: fit-content;
+
 }
 
 .AboutSectionDescription {
@@ -74,6 +75,7 @@
   position: relative;
 
   transition: 0.2s;
+ 
 }
 
 .AboutSectionOpenDescription p {
@@ -145,7 +147,7 @@
     color: #1f1f1f;
   }
 
-  iframe{
+  .AboutSectionIframe{
     display: none;
   }
 }
