--- a/componentes/ToggleListElementBlock/ToggleListElementBlock.module.css
+++ b/componentes/ToggleListElementBlock/ToggleListElementBlock.module.css
@@ -21,6 +21,9 @@
 }
 
 .ToggleListButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   box-sizing: border-box;
   background: none;
   width: 56px;
@@ -66,4 +69,49 @@
 
   color: rgba(0, 0, 0, 0.7);
   
+}
+
+@media(max-width: 1440px) {
+  .ToggleListElementBlock p:nth-child(1) {
+    font-weight: 500;
+    font-size: 24px;
+  }
+
+  .ToggleListElementBlock strong {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: -0.01em;
+  }
+
+  .ToggleListElementBlock p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    /* or 24px */
+
+    letter-spacing: -0.01em;
+  }
+}
+
+
+@media(max-width: 780px) {
+  .ToggleListElementBlock p:nth-child(1) {
+    font-weight: 400;
+  }
+
+  .ToggleListElementBlock p {
+    margin-bottom: 40px;
+  }
+}
+
+
+@media(max-width: 360px) {
+  .ToggleListElementBlock p:nth-child(1) {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 130%;
+
+    letter-spacing: -0.02em;
+  }
 }
