correção de css

--- a/componentes/ToggleText/ToggleText.module.css
+++ b/componentes/ToggleText/ToggleText.module.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   width: 100%;
   padding: 80px 0px 0px 0px;
+
 }
 
 .ToggleTextContainer p {
@@ -22,14 +23,32 @@
 }
 
 .ToggleTextListContainer {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr;
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  display: flex;
+  margin-bottom: 64px;
+  margin-left: 80px;
+  margin-right: 80px;
+  border-bottom: 1px solid #C4C4C4;
 }
 
 .ToggleTextListContainer p {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 130%;
+
+  letter-spacing: -0.02em;
+
+  color: #000000;
+}
+
+.ToggleTextListLeftTitle {
+  display: flex;
+  width: 368px;
+
+}
+
+.ToggleTextListLeftTitle p {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -40,18 +59,20 @@
   letter-spacing: -0.02em;
 
   color: #000000;
-
 }
 
 .ToggleTextRightBlock {
   display: flex;
   flex-direction: column;
   gap: 74px;
+  width: 100%;
+  padding-right: 35px;
 }
 
-.ToggleTextRightBlock p{
+.ToggleTextRightBlock p {
   display: flex;
   justify-content: space-between;
+  min-width: 100%;
 }
 
 .ToggleTextElement {
@@ -124,6 +145,11 @@
     width: 48%;
   }
 
+  .ToggleTextListContainer {
+    margin-left: 8px;
+    margin-right: 4%;
+  }
+
   .ToggleTextListContainer p {
     font-family: 'Inter';
     font-weight: 500;
@@ -132,9 +158,18 @@
   }
 
   .ToggleTextRightBlock {
-    gap: 85px;
+    display: flex;
+    flex-direction: column;
+    gap: 74px;
+    width: 100%;
+    padding-right: 0px;
   }
 
+  .ToggleTextRightBlock p {
+    display: flex;
+    justify-content: space-between;
+    min-width: 100%;
+  }
 
   .ToggleTextListBlock {
     display: flex;
@@ -162,7 +197,7 @@
   .ToggleTextContainer {
     display: flex;
     width: 100%;
-    padding: 80px 37px 0 40px;
+    padding: 80px 16px 0 40px;
   }
 
   .ToggleTextContainer p {
@@ -176,12 +211,27 @@
     display: flex;
     flex-direction: column;
     gap: 56px;
-
+    margin-left: 8px;
+    margin-right: 2%;
   }
 
   .ToggleTextListContainer p {
     font-size: 24px;
 
+  }
+
+  .ToggleTextRightBlock {
+    display: flex;
+    flex-direction: column;
+    gap: 74px;
+    width: 100%;
+    padding-right: 0;
+  }
+
+  .ToggleTextRightBlock p {
+    display: flex;
+    justify-content: space-between;
+    min-width: 100%;
   }
 
   .ToggleTextElement span {
