--- a/componentes/ButtonColor/ButtonColor.module.css
+++ b/componentes/ButtonColor/ButtonColor.module.css
@@ -22,5 +22,6 @@
 .ButtonColorContainer:hover{
     border: 1px solid rgba(96, 110, 120, 0.50);
     background-color: #1d856df0;
+    cursor: pointer;
 }
 
