--- a/componentes/NavBar/NavBar.module.css
+++ b/componentes/NavBar/NavBar.module.css
@@ -37,7 +37,8 @@
 
 .container_navbar {
     display: flex;
-    padding: 28px 40px;
+    align-items: center;
+    padding: 20px 0px;
     top: 0;
     margin: 0;
     font-family: 'Inter';
@@ -65,7 +66,7 @@
   .themeColorSM a:hover{
     color: #5367C9;
   }
-  .themeColorWhite a:hover{
+  .themeWhite a:hover{
     color: #1D856C;
   }
 
@@ -244,11 +245,57 @@
   .buttonMoblieWhite{
     display: none;
   }
+  .NavBarSearchConteiner{
+  }
+  
   .NavBarSearchConteinerMoblie{
     display: none;
   }
+  .NavBarLogOut{
+    border-radius: 100px;
+    font-size: 15px;
+  }
+  .NavBarLogged{
+    border-radius: 100%;
+    width: 56px;
+    height: 56px;
 
-  @media screen and (max-width: 1023px) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 21px;
+  }
+
+  .NavBarLogin{
+    padding: 10px 10px;
+    margin-right: 30px;
+    margin-left: 15px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
+  .NavBarLoginWhite{
+    border: 1px solid rgba(96, 110, 120, 0.25);
+    color: #1F1F1F;
+  }
+  .NavBarLoginColorIP{
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    color: #FFFF;
+  }
+  .NavBarModalContainer{
+    display: flex;
+    justify-content: right;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    z-index: 200;
+  }
+  @media screen and (max-width: 1000px) {
     .container_navbar {
       padding: 16px 24px 16px 24px;
       align-items: center;
@@ -377,8 +424,8 @@
     }
   }
 
-  @media screen and (max-width: 1024px) {
+  @media screen and (min-width: 1366px) {
     .logoWrapper_navbar{
-      margin-right: 15px;
+      margin-right: 45px;
     }
   }
