--- a/componentes/PanelSelector/PanelSelector.module.css
+++ b/componentes/PanelSelector/PanelSelector.module.css
@@ -24,7 +24,6 @@
 .PanelSelectorContainer {
   display: flex;
   gap: 24px;
-  border-top: 1px solid #D1D1D2;
   
   min-width: 100%;
   width: 100%;
@@ -37,8 +36,29 @@
   scrollbar-width: none;
 
 }
+.PanelSelectorTitles {
+  display: flex;
+  gap: 24px;
+  
+  min-width: 100%;
+  width: 100%;
+  height: 63px;
+  padding: 0 9%;
+  border-bottom: 1px solid #D1D1D2;
+
+
+  font-family: "Inter";
+  font-size: small;
+  overflow-x: scroll;
+  scrollbar-width: none;
+
+}
 
 .PanelSelectorContainer::-webkit-scrollbar {
+  background: none;
+  height: 5px;
+}
+.PanelSelectorTitles::-webkit-scrollbar {
   background: none;
   height: 5px;
 }
@@ -83,6 +103,46 @@
   cursor: pointer;
 }
 
+
+.PanelSelectorTitleButtonSelected {
+  display: flex;
+  align-items: flex-end;
+
+  outline: none;
+  background: none;
+  
+  width: fit-content;
+  padding: 2px;
+
+  font-family: "Inter";
+  font-size: 12px;
+  font-weight: 700;
+  color: #141919;
+  white-space: nowrap;
+  
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.PanelSelectorTitleButton {
+  display: flex;
+  align-items: flex-end;
+
+  width: fit-content;
+
+  outline: none;
+  background: none;
+
+  font-family: "Inter";
+  font-size: 12px;
+  font-weight: 700;
+  color: #ABABAB;
+  white-space: nowrap;
+  
+  transition: 0.3s;
+  cursor: pointer;
+}
+
 @media(max-width: 639px){
   .PanelSelectorMain{
     display: flex;
@@ -95,5 +155,12 @@
   .PanelSelectorContainer{
     display: flex;
     gap: 18px;
+  }
+}
+
+@media (min-width: 640px){
+  .PanelSelectorContainerPosition1{
+    position: relative;
+    left: 160px;
   }
 }
