--- a/componentes/InfoTab/InfoTab.module.css
+++ b/componentes/InfoTab/InfoTab.module.css
@@ -37,27 +37,31 @@
   color: #1f1f1f;
 }
 
-.InfoTabBlock button {
+.InfoTabBlackButton{
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: 0px 24px;
-
+  text-decoration: none;
   width: fit-content;
   height: 56px;
-
+  color:#1F1F1F;
   background: #FFFFFF;
 
   border: 1px solid rgba(96, 110, 120, 0.15);
   border-radius: 100px;
 
-  flex: none;
-  order: 0;
-  flex-grow: 0;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 130%;
+  letter-spacing: -0.02em;
+
 }
 
-.InfoTabBlock button:hover {
+.InfoTabBlackButton:hover {
   border: 1px solid #dbdbdb;
   color: #dbdbdb;
   cursor: pointer;
@@ -100,13 +104,13 @@
   color: #fff;
 }
 
-.InfoTabBlockBlack button {
+.InfoTabWhiteButton{
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: 0px 24px;
-
+  text-decoration: none;
   width: fit-content;
   height: 56px;
 
@@ -119,9 +123,17 @@
   flex: none;
   order: 0;
   flex-grow: 0;
+
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 130%;
+  letter-spacing: -0.02em;
+
 }
 
-.InfoTabBlockBlack button:hover {
+.InfoTabWhiteButton:hover {
   border: 1px solid #dbdbdb;
   color: #dbdbdb;
   cursor: pointer;
@@ -220,11 +232,11 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: flex-start;
     padding: 48px 40px;
-
+    gap: 0;
     width: 100%;
-    min-height: fit-content;
-    border-radius: 0px;
+    height: fit-content;
   }
 
   .InfoTabTitle {
@@ -237,26 +249,20 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 0px;
-    gap: 32px;
-
-    width: fit-content;
+    gap: 0px;
+    width: 100%;
     height: fit-content;
-
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
   }
 
   .InfoTabContainerBlack {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: flex-start;
     padding: 48px 40px;
-
+    gap: 0;
     width: 100%;
-    min-height: fit-content;
-    border-radius: 0px;
+    height: fit-content;
   }
 
   .InfoTabTitleBlack {
@@ -271,112 +277,10 @@
     padding: 0px;
     gap: 32px;
 
-    width: fit-content;
+    width: 100%;
     height: fit-content;
-
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
   }
 
 
 }
 
-@media (max-width: 390px) {
-  .InfoTabContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 48px 16px;
-
-    width: 100%;
-    height: 582px;
-  }
-
-  .InfoTabTitle {
-    font-size: 24px;
-  }
-
-  .InfoTabBlock {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 22px;
-
-    width: fit-content;
-    height: 423px;
-
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
-  }
-
-
-  .InfoTabContent {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 150%;
-
-    letter-spacing: -0.02em;
-
-    color: #1F1F1F;
-
-    opacity: 0.7;
-  }
-
-  .InfoTabContainerBlack {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 48px 16px;
-
-    width: 100%;
-    height: 582px;
-  }
-
-  .InfoTabTitleBlack {
-    font-size: 24px;
-  }
-
-  .InfoTabBlockBlack {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 22px;
-
-    width: fit-content;
-    height: 423px;
-
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
-  }
-
-
-  .InfoTabContentBlack {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 150%;
-
-    letter-spacing: -0.02em;
-
-    color: #FFF;
-
-    opacity: 0.7;
-  }
-}
