--- a/componentes/InfoTab/InfoTab.module.css
+++ b/componentes/InfoTab/InfoTab.module.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
 
   width: 97%;
-  height: 592px;
+  height: fit-content;
   background-color: #fff;
   border-radius: 0px 64px 0px 0px;
   padding: 120px 149px 120px 80px;
@@ -72,7 +72,7 @@
   justify-content: space-between;
 
   width: 97%;
-  height: 592px;
+  height: fit-content;
   background-color: #1F1F1F;
   padding: 120px 149px 120px 80px;
 }
@@ -227,7 +227,7 @@
   }
 }
 
-@media(max-width: 780px) {
+@media(max-width: 910px) {
   .InfoTabContainer {
     display: flex;
     flex-direction: column;
@@ -237,6 +237,7 @@
     gap: 0;
     width: 100%;
     height: fit-content;
+    border-radius: 0;
   }
 
   .InfoTabTitle {
