--- a/componentes/Login/Login.module.css
+++ b/componentes/Login/Login.module.css
@@ -46,7 +46,20 @@
     width: 100%;
     margin-bottom: 32px;
 }
+.LoginResposta{
+    background-color: #E95F3A;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 16px;
 
+    color: #fff;
+    font-size: 14px;
+    font-family: 'inter';
+    font-weight: 400;
+    line-height: 150%;
+}
 .LoginCampoButton{
     margin-top: 50px;
     width: 100%;
