--- a/componentes/ButtonColor/ButtonColor.module.css
+++ b/componentes/ButtonColor/ButtonColor.module.css
@@ -2,7 +2,7 @@
 
 .ButtonColorContainer{
     border: 1px solid rgba(96, 110, 120, 0.15);
-    background-color: #1D856C;
+    background-color: #2EB280;
     color: #fff;
     border-radius: 100px;
     padding: 0px 30px;
@@ -21,7 +21,7 @@
 
 .ButtonColorContainer:hover{
     border: 1px solid rgba(96, 110, 120, 0.50);
-    background-color: #1d856df0;
+    background-color: #1D856C;
     cursor: pointer;
 }
 
