--- a/componentes/Login/Login.module.css
+++ b/componentes/Login/Login.module.css
@@ -46,6 +46,20 @@
     width: 100%;
     margin-bottom: 32px;
 }
+
+.LoginEsqueciMinhaSenha{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    color: #606E78;
+}
+
+.LoginEsqueciMinhaSenha:hover{
+    cursor : pointer;
+    text-decoration: underline;
+}
 .LoginResposta{
     background-color: #E95F3A;
     border-radius: 8px;
