--- a/componentes/ButtonColor/ButtonColor.module.css
+++ b/componentes/ButtonColor/ButtonColor.module.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@40;500&display=swap");
 
+.IconeLeft{
+    padding-left: 8px;
+}
+
+.IconeRight{
+    padding-right: 8px;
+}
+
 .ButtonColorContainer{
     border: 1px solid rgba(96, 110, 120, 0.15);
     background-color: #2EB280;
@@ -24,4 +32,41 @@
     background-color: #1D856C;
     cursor: pointer;
 }
+.ButtonColorIconContainer{
+    border: 1px solid rgba(96, 110, 120, 0.15);
+    background-color: #2EB280;
+    color: #fff;
+    border-radius: 100px;
+    padding: 0px 30px;
+    font-size: 15px;
+    font-family: 'inter';
+    font-weight: 500;
+    line-height: 100%;
+    box-sizing: border-box;
+    width: fit-content;
+    height: 64px;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
 
+.ButtonColorIconContainer:hover{
+    border: 1px solid rgba(96, 110, 120, 0.50);
+    background-color: #1D856C;
+    cursor: pointer;
+}
+
+
+/* SMALL */
+@media(max-width: 780px) {
+    .ButtonColorIconContainer{
+        font-size: 0px;
+    }
+    .IconeLeft{
+        padding-left: 0px;
+    }
+    .IconeRight{
+        padding-right: 0px;
+    }
+}
