--- a/componentes/ButtonColor/ButtonColor.module.css
+++ b/componentes/ButtonColor/ButtonColor.module.css
@@ -9,6 +9,8 @@
 }
 
 .ButtonColorContainer{
+    margin-right: 10px;
+    margin-top: 10px;
     border: 1px solid rgba(96, 110, 120, 0.15);
     background-color: #2EB280;
     color: #fff;
