--- a/componentes/ButtonLight/ButtonLight.module.css
+++ b/componentes/ButtonLight/ButtonLight.module.css
@@ -9,6 +9,8 @@
 }
 
 .ButtonLightContainer{
+    margin-right: 10px;
+    margin-top: 10px;
     border: 1px solid rgba(96, 110, 120, 0.50);
     background-color: #fff;
     color: #1F1F1F;
