--- a/componentes/TituloTexto/TituloTexto.module.css
+++ b/componentes/TituloTexto/TituloTexto.module.css
@@ -1,18 +1,16 @@
 .containerTexto{
     background-color: #FFF;
-    padding: 80px 0px 180px 0px;
+    padding: 30px 80px 30px 80px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
 }
 .tituloTexto{
     width: 70%;
-    margin: 45px 45px 75px 45px;
-    padding-left: 125px;
     font-size: 64px;  
+    padding-bottom: 30px;
 }
 .corpoTexto{
-    margin: 45px 180px 45px 180px;
     text-align: justify;
     font-size: 24px;  
 }
@@ -22,19 +20,29 @@
 }
 
 
+/* XSMALL */
+@media screen and (max-width: 374px) {
+    .containerTexto{
+        padding: 30px 16px 30px 16px;
+    }
+}
+/* SMALL */
+@media screen and (min-width: 375px)and (max-width: 767px) {
+    .containerTexto{
+        padding: 30px 40px 30px 40px;
+    }
+}
+
+
 /* SMALL */
 @media screen and (max-width: 1023px) {
     .containerTexto{
-        padding-top: 15px;
-        padding-bottom: 20px;
     }
     .tituloTexto{
         font-size: 32px;  
-        padding-left: 0;
     }
     .corpoTexto{
         font-size: 14px;  
-        margin: 0 30px 0 30px;
     }
     .corpoTexto img{
         width: 280px;
@@ -48,18 +56,11 @@
 }
 /* MEDIUM */
 @media screen and (min-width: 1024px)and (max-width: 1400px) {
-    .containerTexto{
-        padding-top: 60px;
-        padding-bottom: 30px;
-    }
     .tituloTexto{
         font-size: 48px;  
-        padding-left: 75px;
     }
     .corpoTexto{
         font-size: 16px;  
-        margin-left: 120px;
-        margin-right: 120px;
     }
     .corpoTexto img{
         width: 900px;
@@ -71,22 +72,17 @@
     }
 
 }
-
 /* XLARGE */
 @media screen and (min-width: 1920px) {
     .containerTexto{
-        padding-top: 110px;
-        padding-bottom: 250px;
+        padding: 30px 80px 30px 125px;
     }
     .tituloTexto{
         font-size: 80px;  
-        padding-left: 150px;
         width: 60%;
         text-align: left;
     }
     .corpoTexto{
         font-size: 32px;  
-        margin-left: 200px;
-        margin-right: 200px;
     }
 }
