--- a/componentes/ButtonColor/ButtonColor.module.css
+++ b/componentes/ButtonColor/ButtonColor.module.css
@@ -25,3 +25,28 @@
     cursor: pointer;
 }
 
+.ButtonColorMobile{
+    border: 1px solid rgba(96, 110, 120, 0.15);
+    background-color: #1D856C;
+    color: #fff;
+    border-radius: 100px;
+    padding: 0px 30px;
+    font-size: 15px;
+    font-family: 'inter';
+    font-weight: 500;
+    line-height: 100%;
+    box-sizing: border-box;
+    width: 100%;
+    height: 64px;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.ButtonColorMobile:hover{
+    border: 1px solid rgba(96, 110, 120, 0.50);
+    background-color: #1d856df0;
+    cursor: pointer;
+}
