--- a/componentes/Login/Login.module.css
+++ b/componentes/Login/Login.module.css
@@ -79,6 +79,7 @@
     width: 100%;
     display: flex;
     text-transform: uppercase;
+    gap: 15px;
 }
 .LoginButton{
     border: 1px solid rgba(96, 110, 120, 0.15);
@@ -97,12 +98,30 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    cursor: pointer;
+}
+.LoginButtonInativo{
+    border: 1px solid rgba(96, 110, 120, 0.15);
+    background-color: #A6B5BE;
+    color: #fff;
+    border-radius: 100px;
+    padding: 0px 30px;
+    font-size: 15px;
+    font-family: 'inter';
+    font-weight: 500;
+    line-height: 100%;
+    box-sizing: border-box;
+    width: fit-content;
+    height: 64px;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
 }
 
 .LoginButton:hover{
     border: 1px solid rgba(96, 110, 120, 0.50);
     background-color: #1d856df0;
+    cursor: pointer;
 }
 @media screen and (max-width: 1023px) {
     .LoginTitulo{
