--- a/componentes/CardLarge/CardLarge.module.css
+++ b/componentes/CardLarge/CardLarge.module.css
@@ -79,7 +79,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 130%;
-    margin: 0px 80px;
+    margin: 0px 80px 30px 80px;
 }
 
 .CardLargeGrid{
