--- a/componentes/ButtonColor/ButtonColor.module.css
+++ b/componentes/ButtonColor/ButtonColor.module.css
@@ -9,8 +9,6 @@
 }
 
 .ButtonColorContainer{
-    margin-right: 10px;
-    margin-top: 10px;
     border: 1px solid rgba(96, 110, 120, 0.15);
     background-color: #2EB280;
     color: #fff;
@@ -39,7 +37,7 @@
     background-color: #2EB280;
     color: #fff;
     border-radius: 100px;
-    padding: 0px 30px;
+    padding: 0px 23px;
     font-size: 15px;
     font-family: 'inter';
     font-weight: 500;
@@ -53,6 +51,27 @@
     text-decoration: none;
 }
 
+.ButtonColorIconContainerMobile{
+    border: 1px solid rgba(96, 110, 120, 0.15);
+    background-color: #2EB280;
+    color: #fff;
+    border-radius: 100px;
+    padding: 0px 23px;
+    font-size: 15px;
+    font-family: 'inter';
+    font-weight: 500;
+    line-height: 100%;
+    box-sizing: border-box;
+    width: 100%;
+    height: 64px;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
+
 .ButtonColorIconContainer:hover{
     border: 1px solid rgba(96, 110, 120, 0.50);
     background-color: #1D856C;
@@ -64,6 +83,10 @@
 @media(max-width: 780px) {
     .ButtonColorIconContainer{
         font-size: 0px;
+    }
+    .ButtonColorIconContainer img{
+        width: 16px;
+        height: 16px;
     }
     .IconeLeft{
         padding-left: 0px;
