--- a/componentes/CardAlert/CardAlert.module.css
+++ b/componentes/CardAlert/CardAlert.module.css
@@ -11,6 +11,22 @@
     padding: 20px 30px;
     margin: 0px 80px;
 }
+.CardAlertChild{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    letter-spacing: -0.01em;
+    color: #1F1F1F;
+    width: fit-content;
+    background: #F4CCAB;
+    border-radius: 10px;
+    padding: 0px 30px;
+}
+
+.CardAlertChild a{
+    color: #1F1F1F;
+}
 
 @media screen and (max-width: 1023px) {
     .CardAlert{
