--- a/componentes/ButtonColor/ButtonColor.module.css
+++ b/componentes/ButtonColor/ButtonColor.module.css
@@ -8,7 +8,33 @@
     padding-right: 8px;
 }
 
-.ButtonColorContainer{
+.ButtonColorContainerColorSM {
+    margin-right: 10px;
+    margin-top: 10px;
+    border: none;
+    background-color: #5367C9;
+    color: #fff;
+    border-radius: 100px;
+    padding: 0px 30px;
+    font-size: 15px;
+    font-family: 'inter';
+    font-weight: 500;
+    line-height: 100%;
+    box-sizing: border-box;
+    width: fit-content;
+    height: 64px;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+.ButtonColorContainerColorSM:hover {
+    background-color: #1B2D82;
+    cursor: pointer;
+}
+
+.ButtonColorContainerColorIP{
     margin-right: 10px;
     margin-top: 10px;
     border: 1px solid rgba(96, 110, 120, 0.15);
@@ -29,7 +55,7 @@
     text-decoration: none;
 }
 
-.ButtonColorContainer:hover{
+.ButtonColorContainerColorIP:hover{
     border: 1px solid rgba(96, 110, 120, 0.50);
     background-color: #1D856C;
     cursor: pointer;
@@ -72,7 +98,7 @@
         padding-right: 0px;
     }
 }
-.ButtonColorMobile{
+.ButtonColorMobileColorIP{
     border: 1px solid rgba(96, 110, 120, 0.15);
     background-color: #1D856C;
     color: #fff;
@@ -92,8 +118,33 @@
     text-decoration: none;
 }
 
-.ButtonColorMobile:hover{
+.ButtonColorMobileColorIP:hover{
     border: 1px solid rgba(96, 110, 120, 0.50);
     background-color: #1d856df0;
+    cursor: pointer;
+}
+
+.ButtonColorMobileColorSM{
+    border: none;
+    background-color: #5367C9;
+    color: #fff;
+    border-radius: 100px;
+    padding: 0px 30px;
+    font-size: 15px;
+    font-family: 'inter';
+    font-weight: 500;
+    line-height: 100%;
+    box-sizing: border-box;
+    width: 100%;
+    height: 64px;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.ButtonColorMobileColorSM:hover{
+    background-color: #1B2D82;
     cursor: pointer;
 }
