--- a/componentes/RecuperarSenha/RecuperarSenha.module.css
+++ b/componentes/RecuperarSenha/RecuperarSenha.module.css
@@ -28,7 +28,7 @@
     color: #1F1F1F;
 }
 
-.RecuperarSenhaInput{
+.RecuperarSenhaInputColorIP, .RecuperarSenhaInputColorSM{
     width: 98%;
     height: 56px;
     border: 1px solid #EFF5F9;
@@ -46,9 +46,14 @@
     flex-direction: column;
 }
 
-.RecuperarSenhaInput:focus{
+.RecuperarSenhaInputColorIP:focus{
     outline: none !important;
     border: #2EB280 solid 1px;
+}
+
+.RecuperarSenhaInputColorSM:focus{
+    outline: none !important;
+    border: #5367C9 solid 1px;
 }
 
 .RecuperarSenhaInputErro{
@@ -114,7 +119,7 @@
     cursor: pointer;
 }
 
-.RecuperarSenhaBotaoProximo{
+.RecuperarSenhaBotaoProximoColorIP{
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -126,7 +131,24 @@
     padding: 16px 24px;
 }
 
-.RecuperarSenhaBotaoProximo:hover{
+.RecuperarSenhaBotaoProximoColorIP:hover{
+    cursor: pointer;
+}
+
+.RecuperarSenhaBotaoProximoColorSM{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 130%;
+    color: #fff;
+    background: #5367C9;
+    border-radius: 100px;
+    padding: 16px 24px;
+}
+
+.RecuperarSenhaBotaoProximoColorSM:hover{
+    background-color: #1B2D82;
     cursor: pointer;
 }
 
