--- a/componentes/Parcerias/Parcerias.module.css
+++ b/componentes/Parcerias/Parcerias.module.css
@@ -17,7 +17,6 @@
 .parceirosLabel {
   margin-left: 45px;
   margin-right: 45px;
-  
   text-align: center;
   font-family: 'Inter';
   font-style: normal;
@@ -25,6 +24,17 @@
   font-size: 32px;
   line-height: 42px;
   letter-spacing: -0.02em;
+}
+
+.tituloParceiro {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  text-align: center;
+  letter-spacing: -0.01em;
+  color: #606E78;
 }
 
 .gridContainer {
@@ -42,7 +52,7 @@
 }
 
 @media screen and (max-width: 740px) {
-  .logo_parceiros {
+  .info_parceiro {
     display: flex;
     justify-content: center;
     width: 100%;
