--- a/componentes/ButtonColor/ButtonColor.module.css
+++ b/componentes/ButtonColor/ButtonColor.module.css
@@ -8,11 +8,9 @@
     padding-right: 8px;
 }
 
-.ButtonColorContainerColorSM {
+.ButtonColorContainer{
     margin-right: 10px;
     margin-top: 10px;
-    border: none;
-    background-color: #5367C9;
     color: #fff;
     border-radius: 100px;
     padding: 0px 30px;
@@ -29,33 +27,22 @@
     text-decoration: none;
 }
 
-.ButtonColorContainerColorSM:hover {
+.ColorSM {
+    background-color: #5367C9;
+    border: none;
+}
+
+.ColorSM:hover {
     background-color: #1B2D82;
     cursor: pointer;
 }
 
-.ButtonColorContainerColorIP{
-    margin-right: 10px;
-    margin-top: 10px;
+.ColorIP {
     border: 1px solid rgba(96, 110, 120, 0.15);
     background-color: #2EB280;
-    color: #fff;
-    border-radius: 100px;
-    padding: 0px 30px;
-    font-size: 15px;
-    font-family: 'inter';
-    font-weight: 500;
-    line-height: 100%;
-    box-sizing: border-box;
-    width: fit-content;
-    height: 64px;
-    white-space: nowrap;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
 }
 
-.ButtonColorContainerColorIP:hover{
+.ColorIP:hover{
     border: 1px solid rgba(96, 110, 120, 0.50);
     background-color: #1D856C;
     cursor: pointer;
@@ -98,9 +85,8 @@
         padding-right: 0px;
     }
 }
-.ButtonColorMobileColorIP{
-    border: 1px solid rgba(96, 110, 120, 0.15);
-    background-color: #1D856C;
+
+.ButtonColorMobile{
     color: #fff;
     border-radius: 100px;
     padding: 0px 30px;
@@ -118,33 +104,23 @@
     text-decoration: none;
 }
 
-.ButtonColorMobileColorIP:hover{
+.ColorIPMobile {
+    border: 1px solid rgba(96, 110, 120, 0.15);
+    background-color: #1D856C;
+}
+
+.ColorIPMobile:hover{
     border: 1px solid rgba(96, 110, 120, 0.50);
     background-color: #1d856df0;
     cursor: pointer;
 }
 
-.ButtonColorMobileColorSM{
+.ColorSMMobile {
     border: none;
     background-color: #5367C9;
-    color: #fff;
-    border-radius: 100px;
-    padding: 0px 30px;
-    font-size: 15px;
-    font-family: 'inter';
-    font-weight: 500;
-    line-height: 100%;
-    box-sizing: border-box;
-    width: 100%;
-    height: 64px;
-    white-space: nowrap;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
 }
 
-.ButtonColorMobileColorSM:hover{
+.ColorSMMobile:hover{
     background-color: #1B2D82;
     cursor: pointer;
 }
